src/snapshots/tat__tat__test__render_table-21.snap
---
source: src/tat.rs
expression: terminal.backend()
---
"                                              nogeom                                               ▲"
"                                                                                                   ║"
"Feature   │text_field                                   i32_field                                  ║"
"26        │read                                         134                                        ║"
"27        │breath                                       177                                        ║"
"28        │participate                                  400                                        ║"
"29        │tremble                                      -7                                         ║"
"30        │study                                        873                                        ║"
"31        │raspy                                        842                                        ║"
"32        │current                                      323                                        ║"
"33        │bloody                                       418                                        ║"
"34        │murky                                        918                                        ║"
"35        │current                                      212                                        ║"
"36        │read                                         -51                                        ║"
"37        │verify                                       870                                        ║"
"38        │loving                                       13                                         █"
"39        │verify                                       356                                        █"
"40        │die                                          3                                          █"
"41        │raspy                                                                                   █"
"42        │murky          ╭────────────── Jump To Feature ───────────────╮                         █"
"43        │bad            │98765                                         │                         █"
"44        │courageous     ╰───── <press Enter to jump, q to cancel> ─────╯                         █"
"45        │courageous                                                                              █"
"46        │murky                                        321                                        █"
"47        │current                                      946                                        █"
"48        │bad                                          906                                        █"
"49        │fall                                         655                                        █"
"50        │fall                                         847                                        █"
"51        │scrawny                                      227                                        █"
"52        │huge                                         -12                                        █"
"53        │courageous                                   731                                        █"
"54        │read                                         100                                        █"
"55        │study                                        56                                         █"
"56        │bad                                          702                                        █"
"57        │current                                      430                                        █"
"58        │huge                                         895                                        █"
"59        │read                                         -18                                        █"
"60        │legal                                        397                                        █"
"────────────────────────────────────── <type ? to show help> ──────────────────────────────────────▼"
"◄████████████████████████████████████████████████████████████████████████████████████████████══════►"
